# YouTube-Blog-fork

./: .gitignore  README.md
LLMs/dpo/data/: idea-title_pairs-preferences.csv  idea-title_pairs.csv  ideas.csv  title_eval-checkpoint_258-annotated.csv
LLMs/error-analysis/data/: 2025_06_04-request_response.csv  inputs.csv
LLMs/evals/results/: prompt_performance.csv
LLMs/evals/results/0_real-1_gpt/: 0_real-1_gpt.csv
LLMs/evals/results/0_real-2_gpt/: 0_real-2_gpt.csv
LLMs/evals/results/0_real-3_gpt/: 0_real-3_gpt.csv
LLMs/evals/results/0_real-4_gpt/: 0_real-4_gpt.csv
LLMs/evals/results/1_gpt-2_gpt/: 1_gpt-2_gpt.csv
LLMs/evals/results/2_gpt-3_gpt/: 2_gpt-3_gpt.csv
LLMs/evals/results/3_gpt-4_gpt/: 3_gpt-4_gpt.csv
agents/1-tool_use/: agent_example.py  main.py  pyproject.toml  test_transcript.py
ai-for-business/3-sales-use-cases/data/: outreach.csv
power-laws/2-detecting-powerlaws/data/: LI-impressions.csv  YT-earnings.csv  medium-followers.csv
power-laws/3-quantifying-fat-tails/data/: YT-earnings.csv
wavelet-smoothing/: z_rate.csv
