[project]
name = "1-tool-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "openai>=1.12.0",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.2",
]
